# sdk-nrf

./: west.yml
samples/debug/ppi_trace/src/: main.c
samples/enhanced_peripheral/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
